--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 
 .runes-bg {
   position: relative;
-  background: linear-gradient(to right, #2e0866 0%, #101c3b 100%);
+  background: linear-gradient(to right, #371470 0%, #152244 100%);
   height: 100vh;
   width: 100vw;
   overflow: hidden;
